--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li class="nav__item"><a href="#research" class="nav__link">Research</a></li>
           <li class="nav__item"><a href="#work" class="nav__link">Projects</a></li>
           <li class="nav__item"><a href="#clients" class="nav__link">Skills</a></li>
-          <li class="nav__item"><a href="#curricular" class="nav__link">Curricular</a></li>
+          <li class="nav__item"><a href="#curricular" class="nav__link">Extra Curricular</a></li>
           <li class="nav__item"><a href="#achievements" class="nav__link">Achievements</a></li>
           <li class="nav__item"><a href="#interests" class="nav__link">Interests</a></li>
           <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
