--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ Additional features include secure payment processing, real-time notifications, 
 <!-- ***** Curricular Activities ***** -->
 <section class="curricular" id="curricular">
   <div class="row">
-    <h2>Curricular Activities</h2>
+    <h2>Extra Curricular Activities</h2>
     <div class="curricular__content">
       <div class="curricular__item">
         <h3>Volunteering</h3>
