--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                professional abilities while driving technological innovation and excellence.
             </p>
             <!-- Provide a link to your resume -->
-            <a href="files/Resume v4.pdf" class="btn">My Resume</a>
+            <a href="files/CV of Md. Imamul Murslain Sujoy.pdf" class="btn">My Resume</a>
           </div>
 
           <div class="about__photo-container">
