--- a/index.html
+++ b/index.html
@@ -66,9 +66,12 @@
           <div class="about__text">
             <!-- Replace the below paragraph with info about yourself -->
             <p>
-              I want to leverage my skills, competencies, and potential within an esteemed organization,
-               where I can contribute to the company's growth and success. I aim to enhance my 
-               professional abilities while driving technological innovation and excellence.
+              Detail-oriented data professional with a strong focus on data analysis, visualization, and analytics-driven
+decision making. Skilled in Python (Pandas, NumPy), SQL, and Excel, with hands-on experience in
+building custom desktop tools and dashboards for insightful reporting. Passionate about leveraging statistical
+methods and machine learning to extract actionable insights from complex datasets. Additionally experienced in
+web development using Django and Laravel, bringing full-stack capabilities to analytical solutions. Committed
+to continuous learning, research, and innovation to advance technology and impact real-world problems
             </p>
             <!-- Provide a link to your resume -->
             <a href="files/CV of Md. Imamul Murslain Sujoy.pdf" class="btn">My Resume</a>
