--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ decision making. Skilled in Python (Pandas, NumPy), SQL, and Excel, with hands-o
 building custom desktop tools and dashboards for insightful reporting. Passionate about leveraging statistical
 methods and machine learning to extract actionable insights from complex datasets. Additionally experienced in
 web development using Django and Laravel, bringing full-stack capabilities to analytical solutions. Committed
-to continuous learning, research, and innovation to advance technology and impact real-world problems
+to continuous learning, research, and innovation to advance technology and impact real-world problems.
             </p>
             <!-- Provide a link to your resume -->
             <a href="files/CV of Md. Imamul Murslain Sujoy.pdf" class="btn">My Resume</a>
