--- a/index.html
+++ b/index.html
@@ -585,22 +585,22 @@ Additional features include secure payment processing, real-time notifications, 
       <ul class="footer__social-links">
         <li class="footer__social-link-item">
           <a href="https://www.facebook.com/imamulmursalinsujoy/" title="Link to Facebook Profile">
-            <img src="./images/face.webp" class="footer__social-image" alt="Facebook">
+            <img src="images/facebook-48.png" class="footer__social-image" alt="Facebook">
           </a>
         </li>
         <li class="footer__social-link-item">
           <a href="https://github.com/immusu/" title="Link to Github Profile">
-            <img src="./images/g.webp" class="footer__social-image" alt="Github">
+            <img src="images/github-48.png" class="footer__social-image" alt="Github">
           </a>
         </li>
         <li class="footer__social-link-item">
           <a href=https://www.linkedin.com/in/imamulmursalinsujoy/">
-            <img src="./images/link.webp" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
+            <img src="images/linkedin-48.png" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
         <li class="footer__social-link-item">
           <a href=https://www.youtube.com/channel/UCLlMzULTYd_m11qGAGkbt8g">
-            <img src="./images/yt.png" title="Link to YouTube Channel" class="footer__social-image" alt="YouTube">
+            <img src="images/youtube-48.png" title="Link to YouTube Channel" class="footer__social-image" alt="YouTube">
           </a>
         </li>
       </ul>
