--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@ Additional features include secure payment processing, real-time notifications, 
           </a>
         </li>
         <li class="footer__social-link-item">
-          <a href=https://www.linkedin.com/in/imamulmursalinsujoy/">
+          <a href=https://www.linkedin.com/in/imsujoy/">
             <img src="images/linkedin-48.png" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
